# proton-resources

./: .gitignore  CMakeLists.txt  README.md  netlify.toml  package-lock.json  package.json
.netlify/: state.json
atom/: CMakeLists.txt  atom.abi  atom.wasm  commands.sh
atom-prefix/tmp/: atom-cfgcmd.txt
atom/bots/: bots1.sh  bots2.sh  bots3.sh
atom/include/atom/: atom.hpp  constants.hpp  tables.hpp
atom/ricardian/: atom.contracts.md
atom/src/: atom.cpp  balance.cpp  transfer.cpp
c++_tests/: CMakeLists.txt  atom_tests.cpp  contracts.hpp  contracts.hpp.in  eosio.system_tester.hpp
eosio.token-prefix/tmp/: eosio.token-cfgcmd.txt
faucet/: atom.abi  atom.wasm
faucet/include/atom/: atom.hpp  constants.hpp  tables.hpp
faucet/src/: atom.cpp  transfer.cpp
frontend/: .babelrc  .gitignore  README.md  env.d.ts  eslint.config.ts  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vue.config.js
frontend/public/: index.html  site.webmanifest
frontend/src/: App.vue  constants.js  constants.ts  filters.js  main.js  main.ts  utils.js
frontend/src/api/: ram.js  ram.ts  user.js  user.ts
frontend/src/components/: avatar-cmp.vue  avatar.vue  bot-class.vue  bot-overview.vue  botClass.vue  botOverview.vue  buy-plan-modal.vue  buy-ram.vue  buyRam.vue  (+18 more)
js_tests/: README.md  package-lock.json  package.json
js_tests/tests/: example-tests.js  proton-tests.js
resources/: CMakeLists.txt  atom.wasm  commands.sh
resources/bots/: bots.sh  unstakeManual.sh
resources/ricardian/: atom.contracts.md
resources/src/: atom.cpp  transfer.cpp
(+26 files in other folders)
